<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyVocalTask</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_add">+</string>
    <string name="action_sort_date">Trier par date</string>
    <string name="action_sort_size">Trier par taille</string>
    <string name="action_sort_duration">Trier par durée</string>
    <string name="action_sort_name">Trier par nom</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Notes enregistrées</string>
    <string name="title_activity_media__player">Media_Player</string>

    <color name="black">#000000</color>

    <string name="title_activity_main_activity_mediapl">MainActivity_mediapl</string>
    <string name="consulter">Consulter la listes des notes</string>
    <string name="Terminer">Terminer</string>
    <string name="Description">Recorder</string>
    <string name="delete_note">Supprimer</string>
    <string name="edit_note">Modifier</string>
    <string name="edit_date">Date de modification</string>
    <string name="separator">-</string>
    <string name="separator2">/</string>
    <string name="default_time">00:00</string>
    <string name="note_name">Note name</string>
    
    
    
</resources>
