<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_sort_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_date"
        />
    <item
        android:id="@+id/action_sort_size"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_size"/>
    <item
        android:id="@+id/action_sort_duration"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_duration"/>
    <item
        android:id="@+id/action_sort_name"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_name"/>

</menu>