<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".My_Recorder" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Description"
                android:src="@drawable/mic_back" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Chronometer
                android:id="@+id/time_"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_start"
                android:layout_width="30dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/start" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_save"
                android:enabled="true"
                android:gravity="center"
                android:paddingTop="20dip"
                android:text="@string/Terminer"
                android:textColor="#FFF"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/redirige"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="true"
                android:gravity="center"
                android:onClick="redirect"
                android:paddingTop="20dip"
                android:text="@string/consulter"
                android:textColor="#FFF"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

</ScrollView>